Changed the links for PlanetDDS
Changed the links on sponsors sidebar.

--- a/CompanyCustomPages/50.html
+++ b/CompanyCustomPages/50.html
@@ -8,7 +8,7 @@
 	  <div id="tabContent1" class="tab-content">
 	    <div class="tab-pane fade in active" id="home1">
 	      <div class="row">
-    <div class="col-md-8" id="generalInfoPDDS"><a href="https://www.planetdds.com/denticon-cloud-based-practice-management-software/"><img src="Images/CompanyLogos/50.png" width="332" height="158" alt="" id="logo"/></a><p id="planetDDSblurb">Denticon, Planet DDS’s cloud-based practice management software, is a powerful, flexible tool trusted by thousands of dental professionals across the country. Planet DDS was a pioneer in the cloud with Denticon and has over ten years of experience converting dental practices from legacy practice management solutions to its cloud-based solution. Features include:</p>
+    <div class="col-md-8" id="generalInfoPDDS"><a href="http://info.planetdds.com/software"><img src="Images/CompanyLogos/50.png" width="332" height="158" alt="" id="logo"/></a><p id="planetDDSblurb">Denticon, Planet DDS’s cloud-based practice management software, is a powerful, flexible tool trusted by thousands of dental professionals across the country. Planet DDS was a pioneer in the cloud with Denticon and has over ten years of experience converting dental practices from legacy practice management solutions to its cloud-based solution. Features include:</p>
     <div class="row">
     </div>
 	<div class="row">
@@ -124,10 +124,10 @@ Every Denticon subscriber has access to this portal, which can meet most if not 
 				For the company directory, dial 1<br>
 
                 <br>
-                <a target="_blank" href="https://www.planetdds.com/" class="links">Planet DDS</a><br>
+                <a target="_blank" href="http://info.planetdds.com/software" class="links">Planet DDS</a><br>
        	</div>
         <div class="well" id="promo">
-        	<center><a target="_blank" href="https://www.planetdds.com/denticon-cloud-based-practice-management-software/"><img src="Images/DenticonMedia_160х600.png" width="160" height="600" alt=""/></a></center>
+        	<center><a target="_blank" href="http://info.planetdds.com/software"><img src="Images/DenticonMedia_160х600.png" width="160" height="600" alt=""/></a></center>
         </div>
     </div>
   </div>
