--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                    	  <a href="https://www.macpractice.com/" target="blank"><img src="Images/CompanyLogos/47.png" width="374" height="250" alt="" class="center-block"/></a>
                     </div>
                     <div class="item active">
-                   	  <a href="https://www.planetdds.com/denticon-cloud-based-practice-management-software/" target="blank"><img src="Images/DenticonMedia_350x250.png" width="350" height="250" alt="" class="center-block"/></a>
+                   	  <a href="http://info.planetdds.com/software" target="blank"><img src="Images/DenticonMedia_350x250.png" width="350" height="250" alt="" class="center-block"/></a>
                     </div>
                     <div class="item">
                    	  <a href="http://www.brightsquid.com" target="blank"><img src="Images/CompanyLogos/BrightsquidNew.jpg" width="318" height="250" alt="" class="center-block"/></a>
