--- a/aboutMikeUretz.html
+++ b/aboutMikeUretz.html
@@ -69,14 +69,14 @@
               	<div id="carousel" class="carousel slide carousel-fade" data-ride="carousel"> <!-- Carousel items -->
                 <h4><b>Sponsors</b></h4>
                 <div class="carousel-inner">
-                  <div class="item active">
-                   	  <img src="Images/CompanyLogos/47.png" width="374" height="115" alt="" class="center-block"/>
+                  <div class="item">
+                      <a href="https://www.macpractice.com/" target="blank"><img src="Images/CompanyLogos/47.png" width="374" height="250" alt="" class="center-block"/></a>
+                    </div>
+                    <div class="item active">
+                      <a href="http://info.planetdds.com/software" target="blank"><img src="Images/DenticonMedia_350x250.png" width="350" height="250" alt="" class="center-block"/></a>
                     </div>
                     <div class="item">
-                   	  <img src="Images/CompanyLogos/50.png" width="242" height="115" alt="" class="center-block"/>
-                    </div>
-                    <div class="item">
-                   	  <img src="Images/CompanyLogos/BrightsquidNew.jpg" width="318" height="115" alt="" class="center-block"/>
+                      <a href="http://www.brightsquid.com" target="blank"><img src="Images/CompanyLogos/BrightsquidNew.jpg" width="318" height="250" alt="" class="center-block"/></a>
                     </div>
                 </div>
                 <!-- Carousel nav -->
